--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 @font-face {
     font-family: "Pokemon_Unknown";
     src: local(images/Pokemon_Unknown.ttf) format("truetype");
-    src: url(/images/Pokemon_Unknown.ttf) format("truetype");
+    src: url(https://github.com/PlasticJustice/FriendSafariWishlist/raw/gh-pages/images/Pokemon_Unknown.ttf) format("truetype");
 }
 .auto-style1 {
 	text-decoration: underline;
