--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta content="en-us" http-equiv="Content-Language" />
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 <title>Friend Safari Wishlist</title>
-<link rel="shortcut icon" href="images/favicon.ico"/>
+<link rel="shortcut icon" href="https://github.com/PlasticJustice/FriendSafariWishlist/raw/gh-pages/images/favicon.ico"/>
 <style type="text/css">
 @font-face {
     font-family: "Pokemon_Unknown";
