--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 .auto-style1 {
 	text-decoration: underline;
 	text-align: center;
-	font-size: 48pt;
+	font-size: 40pt;
 	font-family: Pokemon_Unknown;
 }
 .auto-style2 {
@@ -23,11 +23,14 @@
 	text-align: center;
 	font-size: x-large;
 }
+.auto-style3 {
+	font-size: 14pt;
+}
 </style>
 </head>
 
 <body background="images/bg.png">
-<a href="https://github.com/PlasticJustice/FriendSafariWishlist/tree/gh-pages"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png"></a>
+<a href="https://github.com/PlasticJustice/FriendSafariWishlist"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png"/></a>
 
 <p class="auto-style1"><strong>My Friend Safari Wishlist</strong></p>
 <p class="auto-style2"><strong>Looking For:</strong></p><br/>
@@ -35,7 +38,7 @@
 <div>
 <table align="left" class="roundy" style="border: 2px solid #4E8234; background: #78C850; margin-right: 5px; margin-bottom: 5px; width: 142px;">
 <tbody><tr>
-<th class="roundytl" width="20%" style="background: #A7DB8D; color: #000000" rowspan="1"> &nbsp;&nbsp;Grass&nbsp;&nbsp; </th>
+<th class="roundytl" width="20%" style="background: #A7DB8D; color: #000000" rowspan="1"> &nbsp;&nbsp;<span class="auto-style3">Grass</span>&nbsp;&nbsp; </th>
 
 </tr>
 
@@ -173,7 +176,7 @@
 	</tbody></table>
 <table align="left" class="roundy" style="border: 2px solid #9C531F; background: #F08030; margin-right: 5px; margin-bottom: 5px; width: 142px;">
 <tbody><tr>
-<th class="roundytl" width="20%" style="background: #F5AC78; color: #000000" rowspan="1"> &nbsp;&nbsp;Fire&nbsp;&nbsp;
+<th class="roundytl" width="20%" style="background: #F5AC78; color: #000000" rowspan="1"> &nbsp;&nbsp;<span class="auto-style3">Fire</span>&nbsp;&nbsp;
 </th>
 </tr>
 
@@ -300,7 +303,7 @@
 	</tbody></table>
 <table align="left" class="roundy" style="border: 2px solid #445E9C; background: #6890F0; margin-right: 5px; margin-bottom: 5px; width: 142px;">
 <tbody><tr>
-<th class="roundytl" width="20%" style="background: #9DB7F5; color: #000000" rowspan="1"> &nbsp;&nbsp;Water&nbsp;&nbsp;
+<th class="roundytl" width="20%" style="background: #9DB7F5; color: #000000" rowspan="1"> &nbsp;&nbsp;<span class="auto-style3">Water</span>&nbsp;&nbsp;
 </th>
 </tr>
 
@@ -449,7 +452,7 @@
 	</tbody></table>
 <table align="left" class="roundy" style="border: 2px solid #A1871F; background: #F8D030; margin-right: 5px; margin-bottom: 5px; width: 142px;">
 <tbody><tr>
-<th class="roundytl" width="20%" style="background: #FAE078; color: #000000" rowspan="1"> &nbsp;&nbsp;Electric&nbsp;&nbsp;
+<th class="roundytl" width="20%" style="background: #FAE078; color: #000000" rowspan="1"> &nbsp;&nbsp;<span class="auto-style3">Electric</span>&nbsp;&nbsp;
 </th>
 </tr>
 
@@ -586,7 +589,7 @@
 	</tbody></table>
 <table align="left" class="roundy" style="border: 2px solid #6D7815; background: #A8B820; margin-right: 5px; margin-bottom: 5px; width: 142px;">
 <tbody><tr>
-<th class="roundytl" width="20%" style="background: #C6D16E; color: #000000" rowspan="1"> &nbsp;&nbsp;Bug&nbsp;&nbsp;
+<th class="roundytl" width="20%" style="background: #C6D16E; color: #000000" rowspan="1"> &nbsp;&nbsp;<span class="auto-style3">Bug</span>&nbsp;&nbsp;
 </th>
 </tr>
 
@@ -723,7 +726,7 @@
 	</tbody></table>
 <table align="left" class="roundy" style="border: 2px solid #6D5E9C; background: #A890F0; margin-right: 5px; margin-bottom: 5px; width: 142px;">
 <tbody><tr>
-<th class="roundytl" width="20%" style="background: #C6B7F5; color: #000000" rowspan="1"> &nbsp;&nbsp;Flying&nbsp;&nbsp;
+<th class="roundytl" width="20%" style="background: #C6B7F5; color: #000000" rowspan="1"> &nbsp;&nbsp;<span class="auto-style3">Flying</span>&nbsp;&nbsp;
 </th>
 </tr>
 
@@ -860,7 +863,7 @@
 	</tbody></table>
 <table align="left" class="roundy" style="border: 2px solid #786824; background: #B8A038; margin-right: 5px; margin-bottom: 5px; width: 142px;">
 <tbody><tr>
-<th class="roundytl" width="20%" style="background: #D1C17D; color: #000000" rowspan="1"> &nbsp;&nbsp;Rock&nbsp;&nbsp;
+<th class="roundytl" width="20%" style="background: #D1C17D; color: #000000" rowspan="1"> &nbsp;&nbsp;<span class="auto-style3">Rock</span>&nbsp;&nbsp;
 </th>
 </tr>
 
@@ -977,7 +980,7 @@
 	</tbody></table>
 <table align="left" class="roundy" style="border: 2px solid #927D44; background: #E0C068; margin-right: 5px; margin-bottom: 5px; width: 142px;">
 <tbody><tr>
-<th class="roundytl" width="20%" style="background: #EBD69D; color: #000000" rowspan="1"> &nbsp;&nbsp;Ground&nbsp;&nbsp;
+<th class="roundytl" width="20%" style="background: #EBD69D; color: #000000" rowspan="1"> &nbsp;&nbsp;<span class="auto-style3">Ground</span>&nbsp;&nbsp;
 </th>
 </tr>
 
@@ -1104,7 +1107,7 @@
 	</tbody></table>
 	<table align="left" class="roundy" style="border: 2px solid #7D1F1A; background: #C03028; margin-right: 5px; margin-bottom: 5px; width: 142px; ">
 <tbody><tr>
-<th class="roundytl" width="20%" style="background: #D67873; color: #000000" rowspan="1"> &nbsp;&nbsp;Fighting&nbsp;&nbsp;
+<th class="roundytl" width="20%" style="background: #D67873; color: #000000" rowspan="1"> &nbsp;&nbsp;<span class="auto-style3">Fighting</span>&nbsp;&nbsp;
 </th>
 </tr>
 
@@ -1235,7 +1238,7 @@
 <div>
 	<table align="left" class="roundy" width="142px" style="border: 2px solid #A13959; background: #F85888; margin-right: 5px; margin-bottom: 5px;">
 <tbody><tr>
-<th class="roundytl" width="20%" style="background: #FA92B2; color: #000000" rowspan="1"> &nbsp;&nbsp;Psychic&nbsp;&nbsp;
+<th class="roundytl" width="20%" style="background: #FA92B2; color: #000000" rowspan="1"> &nbsp;&nbsp;<span class="auto-style3">Psychic</span>&nbsp;&nbsp;
 </th>
 </tr>
 
@@ -1362,7 +1365,7 @@
 		</tbody></table>
 <table align="left" class="roundy" width="142px" style="border: 2px solid #682A68; background: #A040A0; margin-right: 5px; margin-bottom: 5px;">
 <tbody><tr>
-<th class="roundytl" width="20%" style="background: #C183C1; color: #000000" rowspan="1"> &nbsp;&nbsp;Poison&nbsp;&nbsp;
+<th class="roundytl" width="20%" style="background: #C183C1; color: #000000" rowspan="1"> &nbsp;&nbsp;<span class="auto-style3">Poison</span>&nbsp;&nbsp;
 </th>
 </tr>
 
@@ -1499,7 +1502,7 @@
 	</tbody></table>
 <table align="left" class="roundy" width="142px" style="border: 2px solid #638D8D; background: #98D8D8; margin-right: 5px; margin-bottom: 5px;">
 <tbody><tr>
-<th class="roundytl" width="20%" style="background: #BCE6E6; color: #000000" rowspan="1"> &nbsp;&nbsp;Ice&nbsp;&nbsp;
+<th class="roundytl" width="20%" style="background: #BCE6E6; color: #000000" rowspan="1"> &nbsp;&nbsp;<span class="auto-style3">Ice</span>&nbsp;&nbsp;
 </th>
 </tr>
 
@@ -1626,7 +1629,7 @@
 	</tbody></table>
 <table align="left" class="roundy" width="142px" style="border: 2px solid #4924A1; background: #7038F8; margin-right: 5px; margin-bottom: 5px;">
 <tbody><tr>
-<th class="roundytl" width="20%" style="background: #A27DFA; color: #000000" rowspan="1"> &nbsp;&nbsp;Dragon&nbsp;&nbsp;
+<th class="roundytl" width="20%" style="background: #A27DFA; color: #000000" rowspan="1"> &nbsp;&nbsp;<span class="auto-style3">Dragon</span>&nbsp;&nbsp;
 </th>
 </tr>
 
@@ -1713,7 +1716,7 @@
 	</tbody></table>
 <table align="left" class="roundy" width="142px" style="border: 2px solid #493963; background: #705898; margin-right: 5px; margin-bottom: 5px;">
 <tbody><tr>
-<th class="roundytl" width="20%" style="background: #A292BC; color: #000000" rowspan="1"> &nbsp;&nbsp;Ghost&nbsp;&nbsp;
+<th class="roundytl" width="20%" style="background: #A292BC; color: #000000" rowspan="1"> &nbsp;&nbsp;<span class="auto-style3">Ghost</span>&nbsp;&nbsp;
 </th>
 </tr>
 
@@ -1810,7 +1813,7 @@
 	</tbody></table>
 <table align="left" class="roundy" width="142px" style="border: 2px solid #49392F; background: #705848; margin-right: 5px; margin-bottom: 5px;">
 <tbody><tr>
-<th class="roundytl" width="20%" style="background: #A29288; color: #000000" rowspan="1"> &nbsp;&nbsp;Dark&nbsp;&nbsp;
+<th class="roundytl" width="20%" style="background: #A29288; color: #000000" rowspan="1"> &nbsp;&nbsp;<span class="auto-style3">Dark</span>&nbsp;&nbsp;
 </th>
 </tr>
 
@@ -1947,7 +1950,7 @@
 	</tbody></table>
 <table align="left" class="roundy" width="142px" style="border: 2px solid #787887; background: #B8B8D0; margin-right: 5px; margin-bottom: 5px;">
 <tbody><tr>
-<th class="roundytl" width="20%" style="background: #D1D1E0; color: #000000" rowspan="1"> &nbsp;&nbsp;Steel&nbsp;&nbsp;
+<th class="roundytl" width="20%" style="background: #D1D1E0; color: #000000" rowspan="1"> &nbsp;&nbsp;<span class="auto-style3">Steel&nbsp;</span>&nbsp;
 </th>
 </tr>
 
@@ -2064,7 +2067,7 @@
 	</tbody></table>
 <table align="left" class="roundy" width="142px" style="border: 2px solid #9B6470; background: #EE99AC; margin-right: 5px; margin-bottom: 5px;">
 <tbody><tr>
-<th class="roundytl" width="20%" style="background: #F4BDC9; color: #000000" rowspan="1"> &nbsp;&nbsp;Fairy&nbsp;&nbsp;
+<th class="roundytl" width="20%" style="background: #F4BDC9; color: #000000" rowspan="1"> &nbsp;&nbsp;<span class="auto-style3">Fairy</span>&nbsp;&nbsp;
 </th>
 </tr>
 
@@ -2201,7 +2204,7 @@
 	</tbody></table>
 <table align="left" class="roundy" width="142px" style="border: 2px solid #6D6D4E; background: #A8A878; margin-right: 5px; margin-bottom: 5px;">
 <tbody><tr>
-<th class="roundytl" width="20%" style="background: #C6C6A7; color: #000000" rowspan="1"> &nbsp;&nbsp;Pokémon&nbsp;&nbsp;
+<th class="roundytl" width="20%" style="background: #C6C6A7; color: #000000" rowspan="1"> &nbsp;&nbsp;<span class="auto-style3">Normal</span>&nbsp;&nbsp;
 </th>
 </tr>
 
