--- a/index.html
+++ b/index.html
@@ -1135,7 +1135,7 @@
 </td></tr></tbody></table>
 </td>
 </tr>
-<tr style="text-align:center;">
+<tr style="text-align:center; visibility: collapse;">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
@@ -1158,7 +1158,7 @@
 <tr>
 <th style="background: #D67873; color: #000000" colspan="1"> Slot 2
 </th></tr>
-<tr style="text-align:center;">
+<tr style="text-align:center; visibility: collapse;">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
