--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <tr>
 <th style="background: #A7DB8D; color: #000000" colspan="1"> Slot 1
 </th></tr>
-<tr style="text-align:center;">
+<tr style="text-align:center; visibility: collapse;">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
@@ -126,7 +126,7 @@
 </td>
 
 </tr>
-<tr style="text-align:center;">
+<tr style="text-align:center; visibility: collapse;">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
@@ -194,7 +194,7 @@
 </td></tr></tbody></table>
 </td>
 </tr>
-<tr style="text-align:center;">
+<tr style="text-align:center; visibility: collapse;">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
@@ -257,7 +257,7 @@
 </td></tr></tbody></table>
 </td>
 </tr>
-<tr style="text-align:center;">
+<tr style="text-align:center; visibility: collapse;">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
@@ -607,7 +607,7 @@
 </td></tr></tbody></table>
 </td>
 </tr>
-<tr style="text-align:center;">
+<tr style="text-align:center; visibility: collapse;">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
@@ -670,7 +670,7 @@
 </td></tr></tbody></table>
 </td>
 </tr>
-<tr style="text-align:center;">
+<tr style="text-align:center; visibility: collapse;">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
@@ -988,7 +988,7 @@
 <tr>
 <th style="background: #EBD69D; color: #000000" colspan="1"> Slot 1
 </th></tr>
-<tr style="text-align:center;">
+<tr style="text-align:center; visibility: collapse;">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
@@ -1074,7 +1074,7 @@
 <tr>
 <th style="background: #EBD69D; color: #000000" colspan="1"> Slot 3
 </th></tr>
-<tr style="text-align:center;">
+<tr style="text-align:center; visibility: collapse;">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
@@ -1201,7 +1201,7 @@
 </td></tr></tbody></table>
 </td>
 </tr>
-<tr style="text-align:center;">
+<tr style="text-align:center; visibility: collapse;">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
@@ -1256,7 +1256,7 @@
 </td></tr></tbody></table>
 </td>
 </tr>
-<tr style="text-align:center;">
+<tr style="text-align:center; visibility: collapse;">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
@@ -1309,7 +1309,7 @@
 </td></tr></tbody></table>
 </td>
 </tr>
-<tr style="text-align:center;">
+<tr style="text-align:center; visibility: collapse;">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
@@ -1352,7 +1352,7 @@
 </td></tr></tbody></table>
 </td>
 </tr>
-<tr style="text-align:center;">
+<tr style="text-align:center; visibility: collapse;">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
@@ -1734,7 +1734,7 @@
 </td></tr></tbody></table>
 </td>
 </tr>
-<tr style="text-align:center;">
+<tr style="text-align:center; visibility: collapse;">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
@@ -1747,7 +1747,7 @@
 <tr>
 <th style="background: #A292BC; color: #000000" colspan="1"> Slot 2
 </th></tr>
-<tr style="text-align:center;">
+<tr style="text-align:center; visibility: collapse;">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
@@ -1757,7 +1757,7 @@
 </td></tr></tbody></table>
 </td>
 </tr>
-<tr style="text-align:center;">
+<tr style="text-align:center; visibility: collapse;">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
@@ -1770,7 +1770,7 @@
 <tr>
 <th style="background: #A292BC; color: #000000" colspan="1"> Slot 3
 </th></tr>
-<tr style="text-align:center;">
+<tr style="text-align:center; visibility: collapse;">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
@@ -1780,7 +1780,7 @@
 </td></tr></tbody></table>
 </td>
 </tr>
-<tr style="text-align:center;">
+<tr style="text-align:center; visibility: collapse;">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
@@ -1851,7 +1851,7 @@
 </td></tr></tbody></table>
 </td>
 </tr>
-<tr style="text-align:center;">
+<tr style="text-align:center; visibility: collapse;">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
@@ -1894,7 +1894,7 @@
 </td></tr></tbody></table>
 </td>
 </tr>
-<tr style="text-align:center;">
+<tr style="text-align:center; visibility: collapse;">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
@@ -1907,7 +1907,7 @@
 <tr>
 <th style="background: #A29288; color: #000000" colspan="1"> Slot 3
 </th></tr>
-<tr style="text-align:center;">
+<tr style="text-align:center; visibility: collapse;">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
