--- a/index.html
+++ b/index.html
@@ -310,13 +310,14 @@
 </td></tr></tbody></table>
 </td>
 </tr>
-<tr style="text-align:center;">
+<tr style="text-align:center;" id="img">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
-<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #F5AC78; border: 2px solid #9C531F;"> <span class="plainlinks"><img alt="654" src="images/Fire/654MS.png" width="40" height="40"/></span>
+<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #F5AC78; border: 2px solid #9C531F;"> <span class="plainlinks">
+<img alt="654" src="images/Fire/654MS.png" width="40" height="40" id="cimg"/></span>
 </th>
-<td> <span id="txt">Braixen</span> 
+<td> <span id="gtxt">Braixen</span> 
 </td></tr></tbody></table>
 </td>
 </tr>
@@ -749,13 +750,14 @@
 </td></tr></tbody></table>
 </td>
 </tr>
-<tr style="text-align:center;">
+<tr style="text-align:center;" id="img">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
-<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #C6D16E; border: 2px solid #7D1F1A;"> <span class="plainlinks"><img alt="214" src="images/Bug/214MS.png" width="40" height="40"/></span>
+<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #C6D16E; border: 2px solid #7D1F1A;"> <span class="plainlinks">
+<img alt="214" src="images/Bug/214MS.png" width="40" height="40" id="cimg"/></span>
 </th>
-<td> <span id="txt">Heracross</span> 
+<td> <span id="gtxt">Heracross</span> 
 </td></tr></tbody></table>
 </td>
 </tr>
@@ -1336,13 +1338,14 @@
 </td></tr></tbody></table>
 </td>
 </tr>
-<tr style="text-align:center;">
+<tr style="text-align:center;" id="img">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
-<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #FA92B2; border: 2px solid #A13959;"> <span class="plainlinks"><img alt="326" src="images/Psychic/326MS.png" width="40" height="40"/></span>
+<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #FA92B2; border: 2px solid #A13959;"> <span class="plainlinks">
+<img alt="326" src="images/Psychic/326MS.png" width="40" height="40" id="cimg"/></span>
 </th>
-<td> <span id="txt">Grumpig</span>
+<td> <span id="gtxt">Grumpig</span>
 </td></tr></tbody></table>
 </td>
 </tr>
@@ -1360,13 +1363,14 @@
 <tr>
 <th style="background: #FA92B2; color: #000000" colspan="1"> Slot 2
 </th></tr>
-<tr style="text-align:center;">
+<tr style="text-align:center;" id="img">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
-<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #FA92B2; border: 2px solid #A13959;"> <span class="plainlinks"><img alt="202" src="images/Psychic/202MS.png" width="40" height="40"/></span>
+<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #FA92B2; border: 2px solid #A13959;"> <span class="plainlinks">
+<img alt="202" src="images/Psychic/202MS.png" width="40" height="40" id="cimg"/></span>
 </th>
-<td> <span id="txt">Wobbuffet</span>
+<td> <span id="gtxt">Wobbuffet</span>
 </td></tr></tbody></table>
 </td>
 </tr>
