--- a/index.html
+++ b/index.html
@@ -46,6 +46,16 @@
 #txt{
 	color:#000; 
 }
+#imguns{
+	/*filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */
+    filter: grayscale(100%);
+	-moz-filter: grayscale(100%);
+	-ms-filter: grayscale(100%);
+	-o-filter: grayscale(100%);
+	filter: gray; /* IE6-9 */;
+	-webkit-filter: grayscale(100%); /* Chrome 19+, Safari 6+, Safari 6+ iOS */;
+}
+
 
 </style>
 </head>
@@ -471,13 +481,14 @@
 
 
 </tr>
-<tr style="text-align:center;">
+<tr style="text-align:center;" id="imguns">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
-<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #9DB7F5; border: 2px solid #445E9C;"> <span class="plainlinks"><img alt="657" src="images/Water/657MS.png" width="40" height="40"/></span>
+<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #9DB7F5; border: 2px solid #445E9C;"> <span class="plainlinks">
+<img alt="657" src="images/Water/657MS.png" width="40" height="40" id="cimg"/></span>
 </th>
-<td> <span id="txt">Frogadier</span> 
+<td> <span id="gtxt">Frogadier</span> 
 </td></tr></tbody></table>
 </td>
 
@@ -813,13 +824,14 @@
 </td></tr></tbody></table>
 </td>
 </tr>
-<tr style="text-align:center;">
+<tr style="text-align:center;" id="img">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
-<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #C6C6A7; border: 2px solid #6D5E9C;"> <span class="plainlinks"><img alt="084" src="images/Flying/084MS.png" width="40" height="40"/></span>
+<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #C6C6A7; border: 2px solid #6D5E9C;"> <span class="plainlinks">
+<img alt="084" src="images/Flying/084MS.png" width="40" height="40" id="cimg"/></span>
 </th>
-<td> <span id="txt">Doduo</span> 
+<td> <span id="gtxt">Doduo</span> 
 </td></tr></tbody></table>
 </td>
 </tr>
@@ -837,13 +849,14 @@
 </td></tr></tbody></table>
 </td>
 </tr>
-<tr style="text-align:center;">
+<tr style="text-align:center;" id="img">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
-<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #C6C6A7; border: 2px solid #6D5E9C;"> <span class="plainlinks"><img alt="520" src="images/Flying/520MS.png" width="40" height="40"/></span>
+<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #C6C6A7; border: 2px solid #6D5E9C;"> <span class="plainlinks">
+<img alt="520" src="images/Flying/520MS.png" width="40" height="40" id="cimg"/></span>
 </th>
-<td> <span id="txt">Tranquill</span> 
+<td> <span id="gtxt">Tranquill</span> 
 </td></tr></tbody></table>
 </td>
 </tr>
@@ -872,13 +885,14 @@
 <tr>
 <th style="background: #C6B7F5; color: #000000" colspan="1"> Slot 3
 </th></tr>
-<tr style="text-align:center;">
+<tr style="text-align:center;" id="img">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
-<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #A7DB8D; border: 2px solid #6D5E9C;"> <span class="plainlinks"><img alt="357" src="images/Flying/357MS.png" width="40" height="40"/></span>
+<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #A7DB8D; border: 2px solid #6D5E9C;"> <span class="plainlinks">
+<img alt="357" src="images/Flying/357MS.png" width="40" height="40" id="cimg"/></span>
 </th>
-<td> <span id="txt">Tropius</span> 
+<td> <span id="gtxt">Tropius</span> 
 </td></tr></tbody></table>
 </td>
 </tr>
@@ -1420,13 +1434,14 @@
 </td></tr></tbody></table>
 </td>
 </tr>
-<tr style="text-align:center;">
+<tr style="text-align:center;" id="imguns">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
-<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #FA92B2; border: 2px solid #A13959;"> <span class="plainlinks"><img alt="575" src="images/Psychic/575MS.png" width="40" height="40"/></span>
+<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #FA92B2; border: 2px solid #A13959;"> <span class="plainlinks">
+<img alt="575" src="images/Psychic/575MS.png" width="40" height="40" id="cimg"/></span>
 </th>
-<td> <span id="txt">Gothorita</span>
+<td> <span id="gtxt">Gothorita</span>
 </td></tr></tbody></table>
 </td>
 </tr>
@@ -1689,13 +1704,14 @@
 </td></tr></tbody></table>
 </td>
 </tr>
-<tr style="text-align:center;">
+<tr style="text-align:center;" id="imguns">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
-<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #9DB7F5; border: 2px solid #638D8D;"> <span class="plainlinks"><img alt="131" src="images/Ice/131MS.png" width="40" height="40"/></span>
+<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #9DB7F5; border: 2px solid #638D8D;"> <span class="plainlinks">
+<img alt="131" src="images/Ice/131MS.png" width="40" height="40" id="cimg"/></span>
 </th>
-<td> <span id="txt">Lapras</span>
+<td> <span id="gtxt">Lapras</span>
 </td></tr></tbody></table>
 </td>
 </tr>
@@ -1780,13 +1796,14 @@
 <tr>
 <th style="background: #A27DFA; color: #000000" colspan="1"> Slot 3
 </th></tr>
-<tr style="text-align:center;">
+<tr style="text-align:center;" id="imguns">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
-<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #A27DFA; border: 2px solid #4924A1;"> <span class="plainlinks"><img alt="621" src="images/Dragon/621MS.png" width="40" height="40"/></span>
+<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #A27DFA; border: 2px solid #4924A1;"> <span class="plainlinks">
+<img alt="621" src="images/Dragon/621MS.png" width="40" height="40" id="cimg"/></span>
 </th>
-<td> <span id="txt">Druddigon</span>
+<td> <span id="gtxt">Druddigon</span>
 </td></tr></tbody></table>
 </td>
 </tr>
@@ -1812,13 +1829,14 @@
 <tr>
 <th style="background: #A292BC; color: #000000" colspan="1"> Slot 1
 </th></tr>
-<tr style="text-align:center;">
+<tr style="text-align:center;" id="img">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
-<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #A292BC; border: 2px solid #493963;"> <span class="plainlinks"><img alt="353" src="images/Ghost/353MS.png" width="40" height="40"/></span>
+<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #A292BC; border: 2px solid #493963;"> <span class="plainlinks">
+<img alt="353" src="images/Ghost/353MS.png" width="40" height="40" id="cimg"/></span>
 </th>
-<td> <span id="txt">Shuppet</span>
+<td> <span id="gtxt">Shuppet</span>
 </td></tr></tbody></table>
 </td>
 </tr>
@@ -1893,13 +1911,14 @@
 </td></tr></tbody></table>
 </td>
 </tr>
-<tr style="text-align:center;">
+<tr style="text-align:center;" id="img">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
-<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #EBD69D; border: 2px solid #493963;"> <span class="plainlinks"><img alt="623" src="images/Ghost/623MS.png" width="40" height="40"/></span>
+<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #EBD69D; border: 2px solid #493963;"> <span class="plainlinks">
+<img alt="623" src="images/Ghost/623MS.png" width="40" height="40" id="cimg"/></span>
 </th>
-<td> <span id="txt">Golurk</span>
+<td> <span id="gtxt">Golurk</span>
 </td></tr></tbody></table>
 </td>
 </tr>
