--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
 </th></tr>
 <tr style="text-align:center;">
 <td style="background: #FFFFFF;">
-<table class="roundy" style="background: transparent; width: 97%; height: 54px;">
+<table class="roundy" style="background: transparent; width: 100%; ">
 <tbody><tr>
 <th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #9DB7F5; border: 2px solid #445E9C;"> <span class="plainlinks"><img alt="008" src="images/Water/008MS.png" width="40" height="40"/></span>
 </th>
@@ -1027,13 +1027,14 @@
 </td></tr></tbody></table>
 </td>
 </tr>
-<tr style="text-align:center;">
+<tr style="text-align:center;" id="imguns">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
-<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #C6D16E; border: 2px solid #786824;"> <span class="plainlinks"><img alt="213" src="images/Rock/213MS.png" width="40" height="40"/></span>
+<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #C6D16E; border: 2px solid #786824;"> <span class="plainlinks">
+<img alt="213" src="images/Rock/213MS.png" width="40" height="40" id="cimg"/></span>
 </th>
-<td> <span id="txt">Shuckle</span> 
+<td> <span id="gtxt">Shuckle</span> 
 </td></tr></tbody></table>
 </td>
 </tr>
