--- a/index.html
+++ b/index.html
@@ -1107,13 +1107,14 @@
 <tr>
 <th style="background: #EBD69D; color: #000000" colspan="1"> Slot 2
 </th></tr>
-<tr style="text-align:center;">
+<tr style="text-align:center;" id="img">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
-<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #EBD69D; border: 2px solid #927D44;"> <span class="plainlinks"><img alt="051" src="images/Ground/051MS.png" width="40" height="40"/></span>
+<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #EBD69D; border: 2px solid #927D44;"> <span class="plainlinks">
+<img alt="051" src="images/Ground/051MS.png" width="40" height="40" id="cimg"/></span>
 </th>
-<td> <span id="txt">Dugtrio</span> 
+<td> <span id="gtxt">Dugtrio</span> 
 </td></tr></tbody></table>
 </td>
 </tr>
@@ -1470,13 +1471,14 @@
 <tr>
 <th style="background: #C183C1; color: #000000" colspan="1"> Slot 1
 </th></tr>
-<tr style="text-align:center;">
+<tr style="text-align:center;" id="img">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
-<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #C6D16E; border: 2px solid #682A68;"> <span class="plainlinks"><img alt="014" src="images/Poison/014MS.png" width="40" height="40"/></span>
+<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #C6D16E; border: 2px solid #682A68;"> <span class="plainlinks">
+<img alt="014" src="images/Poison/014MS.png" width="40" height="40" id="cimg"/></span>
 </th>
-<td> <span id="txt">Kakuna</span>
+<td> <span id="gtxt">Kakuna</span>
 </td></tr></tbody></table>
 </td>
 </tr>
@@ -1523,13 +1525,14 @@
 </td></tr></tbody></table>
 </td>
 </tr>
-<tr style="text-align:center;">
+<tr style="text-align:center;" id="img">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
-<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #C6D16E; border: 2px solid #682A68;"> <span class="plainlinks"><img alt="168" src="images/Poison/168MS.png" width="40" height="40"/></span>
+<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #C6D16E; border: 2px solid #682A68;"> <span class="plainlinks">
+<img alt="168" src="images/Poison/168MS.png" width="40" height="40" id="cimg"/></span>
 </th>
-<td> <span id="txt">Ariados</span>
+<td> <span id="gtxt">Ariados</span>
 </td></tr></tbody></table>
 </td>
 </tr>
@@ -1607,13 +1610,14 @@
 <tr>
 <th style="background: #BCE6E6; color: #000000" colspan="1"> Slot 1
 </th></tr>
-<tr style="text-align:center;">
+<tr style="text-align:center;" id="img">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
-<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #BCE6E6; border: 2px solid #6D5E9C;"> <span class="plainlinks"><img alt="225" src="images/Ice/225MS.png" width="40" height="40"/></span>
+<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #BCE6E6; border: 2px solid #6D5E9C;"> <span class="plainlinks">
+<img alt="225" src="images/Ice/225MS.png" width="40" height="40" id="cimg"/></span>
 </th>
-<td> <span id="txt">Delibird</span>
+<td> <span id="gtxt">Delibird</span>
 </td></tr></tbody></table>
 </td>
 </tr>
@@ -2340,13 +2344,14 @@
 <tr>
 <th style="background: #C6C6A7; color: #000000" colspan="1"> Slot 1
 </th></tr>
-<tr style="text-align:center;">
+<tr style="text-align:center;" id="img">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
-<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #C6C6A7; border: 2px solid #6D6D4E;"> <span class="plainlinks"><img alt="216" src="images/Normal/216MS.png" width="40" height="40"/></span>
+<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #C6C6A7; border: 2px solid #6D6D4E;"> <span class="plainlinks">
+<img alt="216" src="images/Normal/216MS.png" width="40" height="40" id="cimg"/></span>
 </th>
-<td> <span id="txt">Teddiursa</span>
+<td> <span id="gtxt">Teddiursa</span>
 </td></tr></tbody></table>
 </td>
 </tr>
@@ -2416,13 +2421,14 @@
 </td></tr></tbody></table>
 </td>
 </tr>
-<tr style="text-align:center;">
+<tr style="text-align:center;" id="img">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
-<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #C6C6A7; border: 2px solid #6D6D4E;"> <span class="plainlinks"><img alt="572" src="images/Normal/572MS.png" width="40" height="40"/></span>
+<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #C6C6A7; border: 2px solid #6D6D4E;"> <span class="plainlinks">
+<img alt="572" src="images/Normal/572MS.png" width="40" height="40" id="cimg"/></span>
 </th>
-<td> <span id="txt">Minccino</span>
+<td> <span id="gtxt">Minccino</span>
 </td></tr></tbody></table>
 </td>
 </tr>
