--- a/index.html
+++ b/index.html
@@ -254,26 +254,28 @@
 </td></tr></tbody></table>
 </td>
 </tr>
-<tr style="text-align:center;">
+<tr style="text-align:center;" id="img">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
-<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #F5AC78; border: 2px solid #9C531F;"> <span class="plainlinks"><img alt="513" src="images/Fire/513MS.png" width="40" height="40"/></span>
+<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #F5AC78; border: 2px solid #9C531F;"> <span class="plainlinks">
+<img alt="513" src="images/Fire/513MS.png" width="40" height="40" id="cimg"/></span>
 </th>
-<td> <span id="txt">Pansear</span> 
+<td> <span id="gtxt">Pansear</span> 
 </td></tr></tbody></table>
 </td>
 </tr>
 <tr>
 <th style="background: #F5AC78; color: #000000" colspan="1"> Slot 2
 </th></tr>
-<tr style="text-align:center;">
+<tr style="text-align:center;" id="img">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
-<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #F5AC78; border: 2px solid #9C531F;"> <span class="plainlinks"><img alt="005" src="images/Fire/005MS.png" width="40" height="40"/></span>
+<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #F5AC78; border: 2px solid #9C531F;"> <span class="plainlinks">
+<img alt="005" src="images/Fire/005MS.png" width="40" height="40" id="cimg"/></span>
 </th>
-<td> <span id="txt">Charmeleon</span> 
+<td> <span id="gtxt">Charmeleon</span> 
 </td></tr></tbody></table>
 </td>
 </tr>
@@ -311,13 +313,14 @@
 <tr>
 <th style="background: #F5AC78; color: #000000" colspan="1"> Slot 3
 </th></tr>
-<tr style="text-align:center;">
+<tr style="text-align:center;" id="img">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
-<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #F5AC78; border: 2px solid #9C531F;"> <span class="plainlinks"><img alt="038" src="images/Fire/038MS.png" width="40" height="40"/></span>
+<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #F5AC78; border: 2px solid #9C531F;"> <span class="plainlinks">
+<img alt="038" src="images/Fire/038MS.png" width="40" height="40" id="cimg"/></span>
 </th>
-<td> <span id="txt">Ninetales</span> 
+<td> <span id="gtxt">Ninetales</span> 
 </td></tr></tbody></table>
 </td>
 </tr>
@@ -380,13 +383,14 @@
 
 
 </tr>
-<tr style="text-align:center;">
+<tr style="text-align:center;" id="img">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
-<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #C6C6A7; border: 2px solid #445E9C;"> <span class="plainlinks"><img alt="400" src="images/Water/400MS.png" width="40" height="40"/></span>
+<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #C6C6A7; border: 2px solid #445E9C;"> <span class="plainlinks">
+<img alt="400" src="images/Water/400MS.png" width="40" height="40" id="cimg"/></span>
 </th>
-<td> <span id="txt">Bibarel</span> 
+<td> <span id="gtxt">Bibarel</span> 
 </td></tr></tbody></table>
 </td>
 
@@ -407,13 +411,14 @@
 <tr>
 <th style="background: #9DB7F5; color: #000000" colspan="1"> Slot 2
 </th></tr>
-<tr style="text-align:center;">
+<tr style="text-align:center;" id="img">
 <td style="background: #FFFFFF;">
 <table class="roundy" style="background: transparent; width: 100%; ">
 <tbody><tr>
-<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #9DB7F5; border: 2px solid #445E9C;"> <span class="plainlinks"><img alt="008" src="images/Water/008MS.png" width="40" height="40"/></span>
+<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #9DB7F5; border: 2px solid #445E9C;"> <span class="plainlinks">
+<img alt="008" src="images/Water/008MS.png" width="40" height="40" id="cimg"/></span>
 </th>
-<td> <span id="txt">Wartortle</span> 
+<td> <span id="gtxt">Wartortle</span> 
 </td></tr></tbody></table>
 </td>
 
@@ -1094,13 +1099,14 @@
 </td></tr></tbody></table>
 </td>
 </tr>
-<tr style="text-align:center;">
+<tr style="text-align:center;" id="img">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
-<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #EBD69D; border: 2px solid #927D44;"> <span class="plainlinks"><img alt="328" src="images/Ground/328MS.png" width="40" height="40"/></span>
+<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #EBD69D; border: 2px solid #927D44;"> <span class="plainlinks">
+<img alt="328" src="images/Ground/328MS.png" width="40" height="40" id="cimg"/></span>
 </th>
-<td> <span id="txt">Trapinch</span> 
+<td> <span id="gtxt">Trapinch</span> 
 </td></tr></tbody></table>
 </td>
 </tr>
@@ -1139,13 +1145,14 @@
 </td></tr></tbody></table>
 </td>
 </tr>
-<tr style="text-align:center;">
+<tr style="text-align:center;" id="img">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
-<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #F5AC78; border: 2px solid #927D44;"> <span class="plainlinks"><img alt="323" src="images/Ground/323MS.png" width="40" height="40"/></span>
+<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #F5AC78; border: 2px solid #927D44;"> <span class="plainlinks">
+<img alt="323" src="images/Ground/323MS.png" width="40" height="40" id="cimg"/></span>
 </th>
-<td> <span id="txt">Camerupt</span> 
+<td> <span id="gtxt">Camerupt</span> 
 </td></tr></tbody></table>
 </td>
 </tr>
@@ -2204,13 +2211,14 @@
 <tr>
 <th style="background: #F4BDC9; color: #000000" colspan="1"> Slot 1
 </th></tr>
-<tr style="text-align:center;">
+<tr style="text-align:center;" id="img">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
-<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #F4BDC9; border: 2px solid #9B6470;"> <span class="plainlinks"><img alt="175" src="images/Fairy/175MS.png" width="40" height="40"/></span>
+<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #F4BDC9; border: 2px solid #9B6470;"> <span class="plainlinks">
+<img alt="175" src="images/Fairy/175MS.png" width="40" height="40" id="cimg"/></span>
 </th>
-<td> <span id="txt">Togepi</span>
+<td> <span id="gtxt">Togepi</span>
 </td></tr></tbody></table>
 </td>
 </tr>
@@ -2279,13 +2287,14 @@
 </td></tr></tbody></table>
 </td>
 </tr>
-<tr style="text-align:center;">
+<tr style="text-align:center;" id="img">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
-<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #F4BDC9; border: 2px solid #9B6470;"> <span class="plainlinks"><img alt="684" src="images/Fairy/684MS.png" width="40" height="40"/></span>
+<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #F4BDC9; border: 2px solid #9B6470;"> <span class="plainlinks">
+<img alt="684" src="images/Fairy/684MS.png" width="40" height="40" id="cimg"/></span>
 </th>
-<td> <span id="txt">Swirlix</span>
+<td> <span id="gtxt">Swirlix</span>
 </td></tr></tbody></table>
 </td>
 </tr>
