--- a/index.html
+++ b/index.html
@@ -476,13 +476,14 @@
 
 
 </tr>
-<tr style="text-align:center;">
+<tr style="text-align:center;" id="img">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
-<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #9DB7F5; border: 2px solid #9B6470;"> <span class="plainlinks"><img alt="184" src="images/Water/184MS.png" width="40" height="40"/></span>
+<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #9DB7F5; border: 2px solid #9B6470;"> <span class="plainlinks">
+<img alt="184" src="images/Water/184MS.png" width="40" height="40" id="cimg"/></span>
 </th>
-<td> <span id="txt">Azumarill</span> 
+<td> <span id="gtxt">Azumarill</span> 
 </td></tr></tbody></table>
 </td>
 
@@ -523,13 +524,14 @@
 </td></tr></tbody></table>
 </td>
 </tr>
-<tr style="text-align:center;">
+<tr style="text-align:center;" id="img">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
-<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #FAE078; border: 2px solid #A1871F;"> <span class="plainlinks"><img alt="417" src="images/Electric/417MS.png" width="40" height="40"/></span>
+<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #FAE078; border: 2px solid #A1871F;"> <span class="plainlinks">
+<img alt="417" src="images/Electric/417MS.png" width="40" height="40" id="cimg"/></span>
 </th>
-<td> <span id="txt">Pachirisu</span> 
+<td> <span id="gtxt">Pachirisu</span> 
 </td></tr></tbody></table>
 </td>
 </tr>
@@ -557,13 +559,14 @@
 <tr>
 <th style="background: #FAE078; color: #000000" colspan="1"> Slot 2
 </th></tr>
-<tr style="text-align:center;">
+<tr style="text-align:center;" id="img">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
-<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #FAE078; border: 2px solid #A1871F;"> <span class="plainlinks"><img alt="025" src="images/Electric/025MS.png" width="40" height="40"/></span>
+<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #FAE078; border: 2px solid #A1871F;"> <span class="plainlinks">
+<img alt="025" src="images/Electric/025MS.png" width="40" height="40" id="cimg"/></span>
 </th>
-<td> <span id="txt">Pikachu</span> 
+<td> <span id="gtxt">Pikachu</span> 
 </td></tr></tbody></table>
 </td>
 </tr>
@@ -1170,13 +1173,14 @@
 </td></tr></tbody></table>
 </td>
 </tr>
-<tr style="text-align:center;">
+<tr style="text-align:center;" id="imguns">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
-<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #9DB7F5; border: 2px solid #927D44;"> <span class="plainlinks"><img alt="536" src="images/Ground/536MS.png" width="40" height="40"/></span>
+<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #9DB7F5; border: 2px solid #927D44;"> <span class="plainlinks">
+<img alt="536" src="images/Ground/536MS.png" width="40" height="40" id="cimg"/></span>
 </th>
-<td> <span id="txt">Palpitoad</span> 
+<td> <span id="gtxt">Palpitoad</span> 
 </td></tr></tbody></table>
 </td>
 </tr>
@@ -1586,13 +1590,14 @@
 </td></tr></tbody></table>
 </td>
 </tr>
-<tr style="text-align:center;">
+<tr style="text-align:center;" id="img">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
-<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #C183C1; border: 2px solid #7D1F1A;"> <span class="plainlinks"><img alt="454" src="images/Poison/454MS.png" width="40" height="40"/></span>
+<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #C183C1; border: 2px solid #7D1F1A;"> <span class="plainlinks">
+<img alt="454" src="images/Poison/454MS.png" width="40" height="40" id="cimg"/></span>
 </th>
-<td> <span id="txt">Toxicroak</span>
+<td> <span id="gtxt">Toxicroak</span>
 </td></tr></tbody></table>
 </td>
 </tr>
@@ -1708,13 +1713,14 @@
 </td></tr></tbody></table>
 </td>
 </tr>
-<tr style="text-align:center;">
+<tr style="text-align:center;" id="img">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
-<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #9DB7F5; border: 2px solid #638D8D;"> <span class="plainlinks"><img alt="091" src="images/Ice/091MS.png" width="40" height="40"/></span>
+<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #9DB7F5; border: 2px solid #638D8D;"> <span class="plainlinks">
+<img alt="091" src="images/Ice/091MS.png" width="40" height="40" id="cimg"/></span>
 </th>
-<td> <span id="txt">Cloyster</span>
+<td> <span id="gtxt">Cloyster</span>
 </td></tr></tbody></table>
 </td>
 </tr>
@@ -1947,13 +1953,14 @@
 <tr>
 <th style="background: #A29288; color: #000000" colspan="1"> Slot 1
 </th></tr>
-<tr style="text-align:center;">
+<tr style="text-align:center;" id="img">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
-<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #A29288; border: 2px solid #49392F;"> <span class="plainlinks"><img alt="262" src="images/Dark/262MS.png" width="40" height="40"/></span>
+<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #A29288; border: 2px solid #49392F;"> <span class="plainlinks">
+<img alt="262" src="images/Dark/262MS.png" width="40" height="40" id="cimg"/></span>
 </th>
-<td> <span id="txt">Mightyena</span>
+<td> <span id="gtxt">Mightyena</span>
 </td></tr></tbody></table>
 </td>
 </tr>
@@ -2011,13 +2018,14 @@
 </td></tr></tbody></table>
 </td>
 </tr>
-<tr style="text-align:center;">
+<tr style="text-align:center;" id="img">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
-<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #9DB7F5; border: 2px solid #49392F;"> <span class="plainlinks"><img alt="342" src="images/Dark/342MS.png" width="40" height="40"/></span>
+<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #9DB7F5; border: 2px solid #49392F;"> <span class="plainlinks">
+<img alt="342" src="images/Dark/342MS.png" width="40" height="40" id="cimg"/></span>
 </th>
-<td> <span id="txt">Crawdaunt</span>
+<td> <span id="gtxt">Crawdaunt</span>
 </td></tr></tbody></table>
 </td>
 </tr>
@@ -2066,13 +2074,14 @@
 </td></tr></tbody></table>
 </td>
 </tr>
-<tr style="text-align:center;">
+<tr style="text-align:center;" id="imguns">
 <td style="background: #FFFFFF;">
 <table width="100%" class="roundy" style="background: transparent;">
 <tbody><tr>
-<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #A29288; border: 2px solid #A13959;"> <span class="plainlinks"><img alt="686" src="images/Dark/686MS.png" width="40" height="40"/></span>
+<th width="32px" style="border-radius: 32px; -moz-border-radius: 32px; -webkit-border-radius: 32px; -khtml-border-radius: 32px; -icab-border-radius: 32px; -o-border-radius: 32px; background: #A29288; border: 2px solid #A13959;"> <span class="plainlinks">
+<img alt="686" src="images/Dark/686MS.png" width="40" height="40" id="cimg"/></span>
 </th>
-<td> <span id="txt">Inkay</span>
+<td> <span id="gtxt">Inkay</span>
 </td></tr></tbody></table>
 </td>
 </tr>
